# agent-space

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: getting-started.md  index.md
docs/api/: reference.md
docs/concepts/: agents.md  memory.md  patterns.md  tools.md  workflows.md
docs/cookbooks/: add-a-tool.md  build-a-router.md  integrate-new-llm.md
examples/: 01_quickstart_groupchat.py  02_browser_search_drive.py  03_retrievechat_qdrant.py  04_manager_worker_pipeline.py  05_realtime_gemini_ws.py
src/agent_space/: __init__.py  cli.py  config.py  ui.py
src/agent_space/agents/: __init__.py  autobuild.py  base.py
src/agent_space/agents/multi/: groupchat.py  manager_worker.py  swarm.py
src/agent_space/agents/realtime/: gemini_ws.py
src/agent_space/agents/single/: plan_act_reflect.py  react.py  retrieve_chat.py
src/agent_space/memory/: __init__.py  conversation.py  vector.py
src/agent_space/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
src/agent_space/telemetry/: logging.py  tracing.py
src/agent_space/tools/: __init__.py  base.py  browser.py  google_drive.py  google_search.py  registry.py  youtube_search.py
src/agent_space/utils/: json_io.py  prompts.py  retry.py
src/agent_space/workflows/: __init__.py  dag.py
src/agent_space/workflows/presets/: rag_minimal.py  research_pipeline.py
tests/: conftest.py  test_agents_multi.py  test_agents_single.py  test_cli.py  test_providers.py  test_realtime.py  test_retrieve_chat.py  test_tools.py  test_ui.py
